tests/Houtamelo.Spire.Analyzers.Tests/SPIRE002/cases/Detect_FieldlessRecord.cs
//@ should_fail
// Ensure that SPIRE002 IS triggered when [EnforceInitialization] is on a record class with no fields.
[EnforceInitialization] //~ ERROR
public record EmptyEnforceInitializationRecord;
